assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    color: #3a3a3a;
    font-family: 'League-spartan', sans-serif;
}

h1,
h2,
h3,
h4 {
    font-family: 'League-spartan', sans-serif;
    text-transform: lowercase;
    letter-spacing: 0;
    color: #8A6A74;
}

h5 {
    font-family: 'League-spartan', sans-serif;
    letter-spacing: 0;
    color: #8A6A74;
}

p {
    font-family: 'poppins', sans-serif;
    letter-spacing: 0;
    color: #8A6A74;
    font-size: 18px;
}

/* Responsive for Mobile Code */
body {
    background-color: #D8E2DC;
}

.container {
    width: 100%;
    max-width: 1080px;
    margin: 0 auto;
    background-color: white;
}

/* Header */
header {
    background-color: #FFE5D9;
    padding: 2rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

header a {
    text-decoration: none;
    color: inherit;
}

header p {
    font-family: 'League-spartan', sans-serif;
    color: #8A6A74;
    font-size: 110%;
    margin-left: 10px;
    line-height: 30px;
}

#menu {
    font-size: 100%;
    letter-spacing: 1px;
    list-style-type: none;
}

#menu>li {
    margin-bottom: 1em;
    font-family: "poppins", sans-serif;
    color: #8A6A74;
    font-size: 120%;
}

.active {
    border-bottom: 1px solid #3a3a3a;
}

/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: #FFE5D9;
    width: 100%;
    left: 0;
    padding-left: 2rem;
    display: none;
    top: 100%;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

#logo {
    font-size: 200%;
    line-height: 30px;
    margin: 0 0.5rem;
}

/* Main Content for HOMEPAGE */
main {
    /* Enlarge main element to push footer down*/
    flex: 1 0 auto;
    /* Add margin at the top to prevent content from being covered by the header */
    margin-top: 100px;
    /* Enable flex properties for child elements */
    display: flex;
    flex-direction: column;
}

#banner-content {
    height: 700px;
    width: 100%;
    background: url(../images/chelsea-gates-n8L1VYaypcw-unsplash.jpg) no-repeat center center/cover;
    position: relative;
}

/* First Banner Text Box, 'try your first class free' */
#banner-text {
    /* Final rgba value sets the opacity so it is semi-transparent */
    background-color: rgba(255, 229, 217, .7);
    font-size: 130%;
    text-align: center;
    position: absolute;
    bottom: 180px;
    min-width: 70%;
    min-height: 130px;
    padding: 10px;
}

#banner-text h2 {
    color: white;
}

#banner-text h4 {
    font-size: 75%;
}

#banner-text a {
    font-size: smaller;
}

#banner-text p {
    line-height: 20px;
}

.button {
    background-color: #D8E2DC;
    /* Green */
    border: none;
    color: white;
    padding: 8px 12px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 10px;
    transition-duration: 0.4s;
    cursor: pointer;
}

.button4 {
    background-color: #D8E2DC;
    color: black;
    border: 2px solid #D8E2DC;
}

.button4:hover {
    background-color: #D8E2DC;
}

/* Second Banner Box 'Try out class styles' */
#banner-class-text {
    /* Final rgba value sets the opacity so it is semi-transparent */
    background-color: rgba(255, 229, 217, .7);
    font-size: 120%;
    text-align: center;
    position: absolute;
    bottom: 0px;
    width: 100%;
    min-height: 90px;
    padding: 10px;
}

#banner-class-text h5 {
    font-size: 110%;
    line-height: 25px;
}

#banner-class-text hr {
    border-top: #8A6A74;
    margin: 5px 0;
}

#banner-class-text p {
    line-height: 25px;
    color: #8A6A74;
}

/* Main Content for Sub Pages */
#pages-main {
    /* Enlarge main element to push footer down*/
    flex: 1 0 auto;
    /* Add margin at the top to prevent content from being covered by the header */
    margin-top: 150px;
    /* Enable flex properties for child elements */
    display: flex;
    flex-direction: column;
}

/* Banner Content for CLASSES PAGE */
#page-banner-content {
    height: 200px;
    width: 100%;
    background: url(../images/brighton-beach-banner-page.jpg) no-repeat center center/cover;
    position: relative;
}

/* First Page Title Box */
#page-banner-text {
    /* Final rgba value sets the opacity so it is semi-transparent */
    background-color: rgba(255, 255, 255, .7);
    font-size: 180%;
    text-align: center;
    position: absolute;
    width: 100%;
    height: 100%;
    padding: 20px;
}

#page-banner-text h2 {
    color: #8A6A74;
}

#page-banner-text h4 {
    font-size: 50%;
}

#page-banner-text a {
    font-size: 12px;
}

#page-banner-text p {
    line-height: 20px;
    font-size: 12px;
    color: #8A6A74;
}

#page-cta {
    padding-top: 10px;
}

.button {
    background-color: #D8E2DC;
    border: none;
    color: white;
    padding: 8px 12px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 12px;
    margin: 8px;
    transition-duration: 0.4s;
    cursor: pointer;
}

.button4 {
    background-color: #D8E2DC;
    color: black;
    border: 2px solid #D8E2DC;
}

.button4:hover {
    background-color: #D8E2DC;
}

/* Main Content / Why us? */

#main-info {
    max-width: fit-content;
    margin-left: auto;
    margin-right: auto;
}

#why-us {
    text-align: center;
    padding: 50px 50px;
}

}

#why-us h1 {
    font-size: 200%;
    line-height: 30px;
}

#why-us hr {
    border-top: #8A6A74;
    margin: 25px 0;
}

#why-us p {
    line-height: 25px;
    color: #8A6A74;
}

/* Main content Images */


#studio-images img {
    width: 100%;
    height: auto;
    line-height: 1em;
    margin-top: 10px;
}

/* Contact Us Form Main Section */

#contact-us {
    background-image: url("../images/signup-image.webp");
    background-size: cover;
    background-position: 75%;
    padding: 20px 10% 0 10%;
    flex-grow: 1;
}


#contact-us-form {
    color: #8A6A74;
    background-color: rgba(255, 229, 217, .7);
    padding: 30px;
    width: auto;
}


#contact-us-form>h2 {
    color: #8A6A74;
    margin-bottom: 20px;
}

.text-input {
    background: white;
    color: #8A6A74;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid #fafafa;
    border-radius: 2px;
    padding: 0 5px;
}

textarea {
    background: white;
    color: #8A6A74;
    width: 100%;
    height: 50px;
    margin: 5px 0 20px 0;
    border: 1px solid #fafafa;
    border-radius: 2px;
    padding: 0 5px;
}

.send {
    margin-top: 20px;
    border-radius: 2px;
    padding: 15px 32px;
    font-size: 100%;
    background-color: #8A6A74;
    color: #fafafa;
}

/* Footer Content */

#footer {
    background: #8A6A74;
    padding-top: 20px;
    padding-bottom: 20px;
}

#footer h1, h2, a, p {
    color: #FFE5D9;
    max-width: fit-content;
    margin-left: auto;
    margin-right: auto;
    text-wrap: wrap;
}

#footer-contact {
    text-align: center;
    line-height: 30px;
}

#footer-contact hr {
    border-top: #D8E2DC;
    margin: 20px 0;
}

.fa-instagram {
    padding-top: 30px;
    padding-bottom: 30px;
}

/* Media query: large or landscape phones (576px and up) */
@media screen and (min-width: 576px) {

    /* Main Content / Why us? */

    #main-info {
        max-width: fit-content;
        margin-left: auto;
        margin-right: auto;
    }

    #why-us {
        padding: 50px 50px;
    }

    #why-us h1 {
        font-size: 250%;
        line-height: 30px;
    }

    #why-us hr {
        border-top: #8A6A74;
        margin: 25px 0;
    }

    #why-us p {
        font-size: 130%;
        line-height: 25px;
        color: #8A6A74;
    }
}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }

    #menu {
        display: flex;
    }

    #menu>li {
        padding-left: 1rem;
    }

    .nav-toggle-label {
        display: none;
    }

    #logo {
        font-size: 280%;
        line-height: 40px;
        margin: 0 0.5rem;
    }

    header p {
        font-family: 'League-spartan', sans-serif;
        color: #8A6A74;
        font-size: 110%;
        margin-left: 10px;
    }

    /* Main content */
    main {
        /* Push main content down to accommodate larger header */
        margin-top: 79px;
    }

    /* Banner */
    #banner-text {
        background-color: rgba(255, 229, 217, .7);
        font-size: 200%;
        text-align: center;
        position: absolute;
        bottom: 150px;
        width: 100%;
        min-height: 90px;
        padding: 10px;

    }

    /* Main info and Why Us Section */
    #main-info {
        max-width: fit-content;
        margin-left: auto;
        margin-right: auto;
    }

    #why-us {
        padding: 80px 80px;
    }

    #why-us h1 {
        font-size: 250%;
        line-height: 30px;
    }

    #why-us hr {
        border-top: #8A6A74;
        margin: 25px 0;
    }

    #why-us p {
        font-size: 120%;
        line-height: 25px;
        color: #8A6A74;
    }

    #studio-images img {
        column-count: 2;
    }
}

/* Large devices (laptops and desktops, 992px and up) */
@media screen and (min-width: 992px) {
    #menu a:hover {
        border-bottom: 1px solid #3a3a3a;
    }

        /* Main info and Why Us Section */
        #main-info {
            max-width: fit-content;
            margin-left: auto;
            margin-right: auto;
        }
    
        #why-us {
            margin: auto;
            width: 60%;
        }
    
        #why-us h1 {
            font-size: 250%;
            line-height: 30px;
        }
    
        #why-us hr {
            border-top: #8A6A74;
            margin: 25px 0;
        }
    
        #why-us p {
            font-size: 120%;
            line-height: 25px;
            color: #8A6A74;
        }
}

